# usfiscaldata

./: README.md  example.py  pyproject.toml
fiscaldata/: __init__.py  __main__.py  api.py
tests/: test_api.py  test_datatypes.py  test_filter_.py
